# minesweeper-rs

./: Cargo.toml  Dockerfile  Makefile.toml  package.json
.github/workflows/: docker.yml
client/: Cargo.toml  Makefile.toml  README.md  Trunk.toml  index.html  lobby.html
client/src/: app.rs  events.rs  image.rs  lib.rs  main.rs  socket.rs  utils.rs  viewport.rs
client/src/components/: game_canvas.rs  mod.rs
client/src/contexts/: user.rs
client/src/handles/: animation.rs  click.rs  load.rs  message.rs  mod.rs  resize.rs
client/src/pages/: lobby_id.rs  lobby_new.rs  mod.rs
client/src/renderer/: mod.rs
client/src/utils/: mod.rs  mouse_event_handler.rs  socket.rs
core/: Cargo.toml
core/src/: grid.rs  lib.rs  messages.rs  player.rs  pubsub.rs  tile.rs
core/src/game/: mod.rs
core/src/grid/: _chunk.rs  impl_vec_grid.rs  mod.rs  vec_grid.rs
game/src/: grid.rs  main.rs  tile.rs
model/: Cargo.toml
model/src/: lib.rs
server/: Cargo.toml  Makefile.toml
server/src/: connection_handler.rs  lobby.rs  main.rs
server/src/api/: lobby.rs  mod.rs
server/src/grid/: mod.rs  region.rs  tile.rs
server/src/lobby/: actor.rs  facade.rs  handle.rs  lobby.rs  mod.rs
server/src/middleware/: auth.rs
