[package]
name = "client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
model = { path = "../model" }
core = { path = "../core", features=[] }

yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.37"
serde-wasm-bindgen = "0.5.0"

gloo-net = "0.4.0"
gloo = "0.10.0"
js-sys = "0.3.61"

console_error_panic_hook = { version = "0.1.6", optional = true }

serde_json = "1.0.96"
serde = "1.0.171"
yew-websocket = "1.0.1"
futures-util = { version = "0.3.28", features = ["sink"] }
bitcode = { version = "0.5.0", features = ["serde"] }
wasm-cookies = "0.2.1"
jwt = "0.16.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"



[dependencies.web-sys]
version = "0.3.4"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'HtmlImageElement',
  'Document',
  'Window',
  'console',
  'UiEvent',
  'MouseEvent',
  "WebSocket",
  'CssStyleDeclaration',
  'MessageEvent',
  'Url',
  'Location'
]

