[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.0"
futures-channel = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
rand = "0.8.5"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.0"
core = { path = "../core", features=["server"] }
nanoid = "0.4.0"
serde = "1.0.171"
