[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
env_logger = "0.10.0"
futures-channel = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
rand = "0.8.5"
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.0"
minesweeper_core = { path = "../core", features=["server"], package = 'core' }
model = { path = "../model" }
nanoid = "0.4.0"
bitcode = { version = "0.5.0", features = ["serde"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
